# Volatility-Forecasting-MLOps

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: model.yaml  tickers.yaml
docs/: BUILD_PLAN.md
notebooks/: 01_baselines.ipynb  02_lstm.ipynb
scripts/: train.py
src/: config.py
src/data/: ingest.py
src/eval/: evaluate.py  metrics.py  walk_forward.py
src/features/: dataset.py  realized_vol.py
src/models/: baselines.py  lstm.py  train.py
tests/: test_baselines.py  test_config.py  test_dataset.py  test_evaluate.py  test_ingest.py  test_lstm.py  test_metrics.py  test_realized_vol.py  test_train.py  test_walk_forward.py
