[project]
name = "volatility-forecasting-mlops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "fastapi>=0.138.1",
    "mlflow>=3.14.0",
    "numpy>=2.5.0",
    "onnx>=1.22.0",
    "onnxruntime<1.20",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "torch<2.3",
    "uvicorn>=0.49.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
